# DSMRI

./: .gitignore  Dockerfile  Makefile  pyproject.toml
dsmri/: __main__.py  dsmri.py  main.py
