[tool.poetry]
name = "dsmri"
version = "0.1.0"
description = ""
authors = ["Kushol, Rafsanjany", "Wilman, Alan H", "Kalra, Sanjay", "Yang, Yee-Hong", "Amorim, José A <js.andreamorim.eng@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dsmri"}]

[tool.poetry.dependencies]
python = "^3.10"
medpy = "^0.4.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
umap-learn = "^0.5.5"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
scikit-image = "^0.22.0"
seaborn = "^0.13.2"
nibabel = "^5.2.1"
pywavelets = "^1.6.0"
plotly = "^5.20.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dsmri = "dsmri.main:main"